[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pyjwt",
    "passlib[bcrypt]",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "diffusers>=0.33.1",
    "transformers>=4.51.3"
]
